--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "prod": "NODE_ENV=production node dist/server.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
